---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "field"
        },
        "visibility": "public"
      },
      {
        "name": "enable",
        "type": {
          "kind": "boolean"
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "array",
        "length": 2,
        "type": {
          "kind": "field"
        }
      },
      "visibility": "public"
    },
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _5",
    "private parameters indices : [_0, _2]",
    "public parameters indices : [_1]",
    "return value indices : [_3, _4]",
    "BLACKBOX::RANGE [(_2, 1)] []",
    "CALL func 1: PREDICATE: EXPR [ (1, _2) 0 ]",
    "inputs: [_0, _1], outputs: [_5]",
    "EXPR [ (-1, _2, _5) (1, _3) 0 ]",
    "EXPR [ (-1, _3) (1, _4) 0 ]",
    "func 1",
    "current witness index : _3",
    "private parameters indices : [_0, _1]",
    "public parameters indices : []",
    "return value indices : [_2]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) (-1, _1) 0 ]], outputs: [_3]",
    "EXPR [ (1, _0, _3) (-1, _1, _3) -1 ]",
    "EXPR [ (-1, _0) (1, _2) 0 ]",
    "unconstrained func 0",
    "[Const { destination: Direct(21), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(20), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(21), offset_address: Direct(20) }, Const { destination: Direct(2), bit_size: Field, value: 0 }, BinaryFieldOp { destination: Direct(3), op: Equals, lhs: Direct(0), rhs: Direct(2) }, JumpIf { condition: Direct(3), location: 8 }, Const { destination: Direct(1), bit_size: Field, value: 1 }, BinaryFieldOp { destination: Direct(0), op: Div, lhs: Direct(1), rhs: Direct(0) }, Stop { return_data: HeapVector { pointer: Direct(20), size: Direct(21) } }]"
  ],
  "debug_symbols": "zZDBCoMwDIbfJece1LoxfJUhUmuUQmlLbQdD+u5LRTd3GOyww05p8vcL+f8FBuzj1Ckz2hma6wK9V1qrqdNWiqCsoemSGOxtFzwijeCgE+WERxOgMVFrBjeh4/ppdsKsNQhPasEAzUCVFo5KY34l9qKLz2hVXja44ucnfiK+pU5I5d8uhhKaMuV1Xole4+ZijEYeTIW725XdtvNW4hA95nWrlg/801A4rzeY18UXoRQUCvtlNG16AA==",
  "file_map": {
    "50": {
      "source": "global NUM_RESULTS: u32 = 2;\nfn main(x: Field, y: pub Field, enable: bool) -> pub [Field; NUM_RESULTS] {\n    let mut result = [0; NUM_RESULTS];\n    for i in 0..NUM_RESULTS {\n        if enable {\n            result[i] = return_value(x, y);\n        }\n    }\n    result\n}\n\n#[fold]\nfn return_value(x: Field, y: Field) -> Field {\n    assert(x != y);\n    x\n}\n",
      "path": ""
    }
  },
  "names": [
    "main",
    "return_value"
  ],
  "brillig_names": [
    "directive_invert"
  ]
}
